Add benchmark for inserting a tuple using call API
Additionally
 - add custom profile for running the benchmark
 - fix read benchmarks being run without data in the cluster